--- a/pastebin/frontend/frontend.cabal
+++ b/pastebin/frontend/frontend.cabal
@@ -7,6 +7,8 @@ library
   hs-source-dirs: src
   build-depends: base
                , common
+               , containers
+               , jsaddle
                , obelisk-frontend
                , obelisk-route
                , reflex-dom
