--- a/url-shortener/frontend/frontend.cabal
+++ b/url-shortener/frontend/frontend.cabal
@@ -7,11 +7,13 @@ library
   hs-source-dirs: src
   build-depends: base
                , common
+               , containers
                , obelisk-frontend
                , obelisk-route
                , reflex-dom
                , obelisk-executable-config-lookup
                , obelisk-generated-static
+               , jsaddle
                , text
   exposed-modules:
     Frontend
