--- a/url-shortener/backend/backend.cabal
+++ b/url-shortener/backend/backend.cabal
@@ -8,12 +8,15 @@ library
   if impl(ghcjs)
     buildable: False
   build-depends: base
+               , bytestring
                , common
                , frontend
                , obelisk-backend
                , obelisk-route
+               , postgresql-simple
                , gargoyle-postgresql-connect
                , resource-pool
+               , snap-core
   exposed-modules:
     Backend
   ghc-options: -Wall
